@@ -60,24 +60,24 @@ class Solution {
 
 
 class Solution {
-    List<List<Integer>> ans = new LinkedList<>();
+    List<List<Integer>> ans = new ArrayList<>();
     int n, k;
     public List<List<Integer>> combine(int n, int k) {
         this.n = n;
         this.k = k;
-        dfs(1, new LinkedList<Integer>());
+        dfs(1, new ArrayList<Integer>());
         return ans;
     }
     
-    public void dfs(int first, LinkedList<Integer> cur) {
+    public void dfs(int first, List<Integer> cur) {
         if(cur.size() == k) {
-            ans.add(new LinkedList<>(cur));
+            ans.add(new ArrayList<>(cur));
             return;
         }
         for(int i = first; i <= n; i++) {
             cur.add(i);
             dfs(i + 1, cur);
-            cur.removeLast();
+            cur.remove(cur.size() - 1);
         }
     }
 }
